# syster

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  WEB_PACKAGES_README.md  WEB_PACKAGES_TESTING.md  bunfig.toml  create-lsp-issues.sh  package-lock.json  package.json
crates/syster-base/: Cargo.toml
crates/syster-base/src/: lib.rs
crates/syster-base/src/core/: constants.rs  file_io.rs  mod.rs  parse_result.rs  span.rs
crates/syster-base/src/core/parse_result/: tests.rs
crates/syster-base/src/core/tests/: tests_constants.rs
crates/syster-base/src/language/: file.rs  mod.rs  parser.rs
crates/syster-base/src/language/kerml/: mod.rs
crates/syster-base/src/language/sysml/: mod.rs  parser.rs  populator.rs  validator.rs
crates/syster-base/src/parser/: kerml.pest  keywords.rs  sysml.pest
crates/syster-base/src/project/: diagnostic_publisher.rs  file_loader.rs  mod.rs  stdlib_loader.rs  workspace_loader.rs
crates/syster-base/src/project/diagnostic_publisher/: tests.rs
crates/syster-base/src/project/file_loader/: parsing.rs  tests.rs
crates/syster-base/src/project/parse_result/: tests.rs
crates/syster-base/src/project/stdlib_loader/: loader.rs  tests.rs
crates/syster-base/src/project/workspace_loader/: tests.rs
crates/syster-base/src/semantic/: analyzer.rs  graphs.rs  mod.rs  reference_collector.rs  resolver.rs  symbol_table.rs  workspace.rs
crates/syster-base/src/semantic/adapters/: inlay_hints_extract_inlay_hints_test.rs  kerml_adapter_test.rs  mod.rs  syntax_factory.rs  sysml_adapter.rs  sysml_adapter_sysmladapter_test.rs  tests.rs
crates/syster-base/src/semantic/analyzer/: tests.rs  validator.rs
crates/syster-base/src/semantic/graphs/: one_to_many_graph.rs  one_to_many_graph_onetomanygraph_test.rs  one_to_one_graph.rs  reference_index.rs  relationship_graph.rs  symmetric_graph.rs  symmetric_graph_symmetricgraph_test.rs  tests.rs
crates/syster-base/src/semantic/inlay_hints/: mod.rs
crates/syster-base/src/semantic/processors/: mod.rs  reference_collector.rs  semantic_token_collector.rs  semantic_token_text_extraction_test.rs  tests.rs
crates/syster-base/src/semantic/reference_collector/: tests.rs
crates/syster-base/src/semantic/relationship_validator/: tests.rs
crates/syster-base/src/semantic/resolver/: import_resolver.rs  name_resolver.rs  tests.rs
crates/syster-base/src/semantic/symbol_table/: build_scope_chain_test.rs  find_in_scope_chain_test.rs  (+11 more)
crates/syster-base/src/syntax/: file.rs  mod.rs  parser.rs
crates/syster-base/tests/: architecture_helpers.rs  architecture_tests.rs  batch_1_test.rs  documentation_tests.rs  stdlib_kerml_test.rs  tests.rs  tests_architecture.rs  tests_documentation.rs  tests_kerml_examples.rs  tests_kerml_imports.rs  tests_main.rs  tests_parser_kerml.rs  tests_parser_sysml.rs  tests_semantic_cross_file.rs  tests_semantic_duplicate_symbol.rs  tests_semantic_import.rs  tests_semantic_kerml_imports.rs  tests_semantic_resolver.rs  tests_semantic_sysml_graph.rs  tests_semantic_workspace.rs  tests_semantic_workspace_file.rs  tests_stdlib_kerml.rs  tests_sysml_examples.rs
crates/syster-base/tests/core/: mod.rs
crates/syster-base/tests/parser/: batch_2_test.rs  expression_tests.rs  kerml_tests.rs  mod.rs  parser_parse_content_test.rs  span_tests.rs  stdlib_kerml_tests.rs  stdlib_sysml_tests.rs  sysml_parser_load_and_parse_test.rs  sysml_tests.rs  test_kerml_stdlib.rs  tests_kerml.rs  tests_keywords.rs  tests_span.rs  tests_sysml.rs
crates/syster-base/tests/semantic/: batch_3_test.rs  cross_file_tests.rs  duplicate_symbol_test.rs  folding_extract_folding_ranges_test.rs  folding_tests.rs  import_tests.rs  kerml_inlay_test.rs  kerml_selection_test.rs  kerml_visitor_tests.rs  mod.rs  selection_collect_containing_spans_test.rs  selection_collect_definition_spans_test.rs  selection_collect_package_spans_test.rs  selection_tests.rs  semantic_analyzer_semanticanalyzer_test.rs  stdlib_symbols_test.rs  sysml_graph_tests.rs  sysml_inlay_hints_collect_definition_hints_test.rs  sysml_parsing_tests.rs  sysml_selection_collect_usage_spans_test.rs  sysml_selection_find_selection_spans_test.rs  sysml_selection_range_size_test.rs  sysml_selection_try_push_span_test.rs  sysml_visitor_tests.rs  test_utils.rs  tests_cross_file.rs  tests_import.rs  tests_kerml_visitor.rs  tests_sysml_graph.rs  tests_sysml_visitor.rs  visitor_astvisitor_test.rs
crates/syster-base/tests/syntax/: mod.rs  tests_kerml_ast.rs
(+303 files in other folders)
