[workspace]
members = [
    "crates/syster-base",
    "crates/syster-lsp",
    "crates/syster-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["jade-codes"]
license = "MIT"
repository = "https://github.com/jade-codes/syster"

[workspace.lints.clippy]
# Enforce explicit error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Code quality
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Performance
inefficient_to_string = "warn"
unnecessary_wraps = "warn"

# Style consistency
enum_glob_use = "warn"
wildcard_imports = "warn"

# Test quality - deny control flow complexity in tests
collapsible_if = "warn"
collapsible_else_if = "warn"
cognitive_complexity = "deny"

# Deny by category (set explicit priority to avoid ambiguity)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# ============================================================================
# Build Optimization Profiles
# ============================================================================

# Dev profile: optimize for fast compile times
[profile.dev]
opt-level = 0
debug = true
incremental = true
# More codegen units = faster compile, slower runtime (fine for dev)
codegen-units = 256

# Dev dependencies can be optimized (tests run faster)
[profile.dev.package."*"]
opt-level = 1

# Test profile inherits from dev but can have overrides
[profile.test]
opt-level = 0
debug = true
incremental = true

# Release profile: balanced for dev containers (lower memory usage)
[profile.release]
opt-level = 3
lto = false
codegen-units = 16
strip = true

# Production profile: maximum optimization (use with `cargo build --profile production`)
# Requires more memory - may fail in constrained environments
[profile.production]
inherits = "release"
lto = "thin"
codegen-units = 1
