[package]
name = "syster-base"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "syster"
path = "src/lib.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
from-pest = "0.3"
pest-ast = "0.3"
rayon = "1.10"
unicode-ident = "1.0"
rowan = "0.16.1"
logos = "0.16.0"
tokio-util = "0.7"

[dev-dependencies]
rstest = "0.23"
tempfile = "3.13"
once_cell = "1.21"
